Done with deleting teams on pas
